# Transight

./: .gitignore  README.md  Transight.pen  bump-version.sh  index.html  package-lock.json  package.json  pencil-new.pen
.claude/plan/: Transight划词翻译应用开发.md  样式修复说明.md  设计修复.md  设计修复完成总结.md  设计差异详细分析.md
.github/workflows/: build.yml  release.yml
docs/: architecture.md  system-design.md
selection/: Cargo.toml  macos.rs  windows.rs
src/: App.vue  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  selection.rs  translate.rs  window.rs
src-tauri/src/config/: store.rs
src-tauri/src/engine/: deepl.rs  google.rs  mod.rs  openai.rs  registry.rs  translator.rs
src-tauri/src/selection/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/services/: manager.rs
src/components/: ResizeHandles.vue  ServiceManager.vue  TitleBar.vue  TranslationCard.vue
src/stores/: translation.ts
src/types/: index.ts
src/utils/: tauri.ts
src/windows/: SettingsWindow.vue  TranslationWindow.vue
