[package]
name = "selection"
version = "0.1.0"
description = "跨平台文本选择捕获库"
authors = ["CoutCin"]
edition = "2024"

[lib]
name = "selection"
path = "lib.rs"

[dependencies]
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.9"
wl-clipboard-rs = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-ng = "0.1"
accessibility-sys-ng = "0.1"
core-foundation = "0.10"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
arboard = "3.6"
enigo = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_UI_Accessibility",
] }
