[package]
name = "transight"
version = "0.1.1"
description = "跨平台划词翻译工具"
authors = ["CoutCin"]
edition = "2024"

[lib]
name = "transight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
async-trait = "0.1.89"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
arboard = "3.6.1"
enigo = "0.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.9.3"
x11-clipboard = "0.9.3"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-ng = "0.1.6"
accessibility-sys-ng = "0.1.3"
core-foundation = "0.9.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_UI_Accessibility",
] }

